2004-10-15  Radek Doulik  <rodo@ximian.com>

	* spell.c (spell_add_to_personal_no_language): new helper method
	to report broken language settings
	(spell_add_to_personal): call spell_add_to_personal_no_language if
	language is null
	(add_cb): ditto

	* test-html-editor-control.c (save_through_plain_persist_stream):
	fixed save plain

2004-09-20  Radek Doulik  <rodo@ximian.com>

	* menubar.c (font_style_cb): toggle style instead of setting it on

2004-09-17  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: api version 3.1 -> 3.6

2004-09-02  Radek Doulik  <rodo@ximian.com>

	* text.c (text_properties): connect signals to right widgets, they
	were before all set to bold button

	Fixes #62087

2004-08-13  JP Rosevear  <jpr@ximian.com>

	* menubar.c (insert_image_cb): optionally use gtk file chooser
	(file_dialog_ok): ditto
	(insert_file_dialog): ditto and use it in a more GtkDialog manner

2004-07-22  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (gtkhtml_data, LDADD): Use GTKHTML_API_VERSION

2004-06-25  Radek Doulik  <rodo@ximian.com>

	* editor-control-shlib.c (editor_control_shlib_factory): make the
	function static

	* popup.c (remove_link): use html_engine_set_link

Sat Jun  5 12:20:42 2004  Owen Taylor  <otaylor@redhat.com>

	* html-stream-mem.c (html_stream_mem_construct): Add a missing static.

2004-06-04  Radek Doulik  <rodo@ximian.com>

	* clean all unused variables and other compiler warnings

	* gi-combo-box.c (gtk_combo_tearoff_bg_copy): replace deprecated
	calls

	* link.c (link_set_ui): removed unused variables
	removed unused variables and old unused methods

	* image.c (load_done): added return value
	remove unused old methods

	* cell.c (data_new): make sure we always return value

	* utils.c (editor_hig_vbox): return value (pointed out by Miguel Ibarra)

2004-05-31  Radek Doulik  <rodo@ximian.com>

	* body.c (ADD_COLOR): get colors from settings and not from
	default settings

	Fixes #59258
