@@ -1,3 +1,13 @@
+2004-11-24  Radek Doulik  <rodo@ximian.com>
+
+	* GNOME_GtkHTML_Editor.xml.in: remove some icons which we now have
+	in GIT
+
+	* menubar.c (menubar_setup): use bonobo_ui_util_pixbuf_to_xml to
+	quiet bonobo code (instead of setting pixtype and pixname, which
+	triggers warnings from bonobo code)
+	add more GIT icons
+
 2004-10-15  Radek Doulik  <rodo@ximian.com>
 
 	* spell.c (spell_add_to_personal_no_language): new helper method
